[Fountain pen] Fix horizontal scrolling issue

--- a/src/sass/_all.scss
+++ b/src/sass/_all.scss
@@ -506,9 +506,10 @@ body {
                         height: calc(100vh);
                         padding-top: calc(50px + #{$header-height});
                         top: 0;
-                        width: 100%;
-                        padding-right: calc(40% + #{$side-margin});
+                        // width: 100%;
+                        padding-right: calc(30% + #{$side-margin});
                         overflow: scroll;
+                        width: calc(100vw - #{$side-margin}*2);
                         > p {
                             text-align: justify;
                         }
@@ -1976,6 +1977,7 @@ body {
             }
             
             .videoContainer {
+                height: 100vh;
                 pointer-events: none;
                 width: 100%;
                 &.compact {
